--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Express.js, Node.js, JS",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.18.2",
+    "node": "^19.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mightjustdie/Note-Taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mightjustdie/Note-Taker/issues"
+  },
+  "homepage": "https://github.com/mightjustdie/Note-Taker#readme"
 }
